hphp/hack/test/typecheck/new_inference/typehole/t21684610.php.like_types.exp
File "t21684610.php", line 15, characters 10-10:
Invalid argument (Typing[4110])
File "t21684610.php", line 8, characters 38-39:
Expected ~[unresolved] because it is an unenforceable type
File "t21684610.php", line 15, characters 10-10:
But got int
